// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a storage state > based on the many losers scenario > should serialize and deserialize correctly 1`] = `
"[
  {
    "gameState": [
      0,
      2,
      1,
      6,
      3,
      5,
      8,
      4
    ],
    "winner": {
      "gameState": [
        0,
        2,
        1,
        6,
        3,
        5,
        8
      ],
      "player": 2
    }
  },
  {
    "gameState": [
      0,
      2,
      1,
      6,
      3,
      5,
      8,
      7,
      4
    ],
    "winner": {
      "gameState": [
        0,
        2,
        1,
        6,
        3,
        5,
        8,
        7
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      2,
      1,
      6,
      3,
      8
    ],
    "winner": {
      "gameState": [
        0,
        2,
        1,
        6,
        3
      ],
      "player": 2
    }
  },
  {
    "gameState": [
      0,
      2,
      1,
      6,
      4,
      3,
      8
    ],
    "winner": {
      "gameState": [
        0,
        2,
        1,
        6,
        4,
        3
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      2,
      1,
      6,
      4,
      5,
      8
    ],
    "winner": {
      "gameState": [
        0,
        2,
        1,
        6,
        4,
        5
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      2,
      1,
      6,
      4,
      7,
      8
    ],
    "winner": {
      "gameState": [
        0,
        2,
        1,
        6,
        4,
        7
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      2,
      1,
      6,
      4,
      8,
      7
    ],
    "winner": {
      "gameState": [
        0,
        2,
        1,
        6
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      2,
      3,
      1,
      6
    ],
    "winner": {
      "gameState": [
        0,
        2,
        3,
        1
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      2,
      3,
      4,
      6
    ],
    "winner": {
      "gameState": [
        0,
        2,
        3,
        4
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      2,
      3,
      5,
      6
    ],
    "winner": {
      "gameState": [
        0,
        2,
        3,
        5
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      2,
      3,
      6,
      4,
      1,
      5
    ],
    "winner": {
      "gameState": [
        0,
        2,
        3,
        6,
        4,
        1
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      2,
      3,
      6,
      4,
      5,
      8
    ],
    "winner": {
      "gameState": [
        0,
        2,
        3,
        6,
        4,
        5
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      2,
      3,
      6,
      4,
      7,
      8
    ],
    "winner": {
      "gameState": [
        0,
        2,
        3,
        6
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      2,
      3,
      6,
      4,
      8,
      5
    ],
    "winner": {
      "gameState": [
        0,
        2,
        3,
        6,
        4,
        8
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      2,
      3,
      7,
      6
    ],
    "winner": {
      "gameState": [
        0,
        2,
        3,
        7
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      2,
      3,
      8,
      6
    ],
    "winner": {
      "gameState": [
        0,
        2
      ],
      "player": 1
    }
  }
]"
`;

exports[`a storage state > that is built up > should hide state 1`] = `
"[
  {
    "gameState": [
      0,
      1
    ],
    "winner": {
      "gameState": [
        0,
        1
      ],
      "player": 1
    }
  }
]"
`;

exports[`a storage state > that is built up > should serialize and deserialize correctly 1`] = `
"[
  {
    "gameState": [
      0,
      1,
      3,
      2,
      6
    ],
    "winner": {
      "gameState": [
        0,
        1,
        3,
        2
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      1,
      3,
      4,
      6
    ],
    "winner": {
      "gameState": [
        0,
        1,
        3,
        4
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      1,
      3,
      5,
      6
    ],
    "winner": {
      "gameState": [
        0,
        1,
        3,
        5
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      1,
      3,
      6,
      4,
      2,
      5
    ],
    "winner": {
      "gameState": [
        0,
        1,
        3,
        6,
        4,
        2
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      1,
      3,
      6,
      4,
      5,
      8
    ],
    "winner": {
      "gameState": [
        0,
        1,
        3,
        6,
        4,
        5
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      1,
      3,
      6,
      4,
      7,
      5
    ],
    "winner": {
      "gameState": [
        0,
        1,
        3,
        6
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      1,
      3,
      6,
      4,
      8,
      5
    ],
    "winner": {
      "gameState": [
        0,
        1,
        3,
        6,
        4,
        8
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      1,
      3,
      7,
      6
    ],
    "winner": {
      "gameState": [
        0,
        1,
        3,
        7
      ],
      "player": 1
    }
  },
  {
    "gameState": [
      0,
      1,
      3,
      8,
      6
    ],
    "winner": {
      "gameState": [
        0,
        1
      ],
      "player": 1
    }
  }
]"
`;

exports[`a storage state > that is empty > should serialize and deserialize correctly 1`] = `"[]"`;
